# invisible

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  START_HERE.md  invisible.toml.example  tmux.conf
.githooks/: pre-push
.github/workflows/: security-review.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  active-workstream  config.json
.planning/workstreams/ai-bubble/: ROADMAP.md  STATE.md
.planning/workstreams/analytics-aggregator/: ROADMAP.md  STATE.md
completions/: _invisible  invisible.bash
frontend/: .thumbnail  ai-chat.jsx  app.jsx  data.jsx  icons.jsx  index.html  styles.css
frontend-vite/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend-vite/src/: AiChat.jsx  App.jsx  Data.jsx  Icons.jsx  TweaksPanel.jsx  main.jsx  styles.css
frontend/pages/: analytics.jsx  calendar.jsx  dashboard.jsx  focus.jsx  folders.jsx  relations.jsx  terminals.jsx  tools.jsx
lib/: checkpoint.py  config.py  dashboard_render.py  infisical.py  markdown_vault.py  notion.py  orchestrator.py  pty_server.py  runners.py  server_store.py  telegram.py  worktree.py
lib/api/: __init__.py  chat.py  projects.py  test_chat.py  tree_local.py  tree_repo.py  tree_vps.py
prompts/: claude_review.md  codex_task.md  gsd_pick.md  standup.md
scripts/: install-hooks.sh  update-changelog.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sse.rs
tests/: test_api_projects.py
(+52 files in other folders)
