[package]
name = "invisible-tauri"
version = "0.1.0"
edition = "2021"
description = "Invisible desktop shell"
default-run = "invisible-tauri"

[lib]
name = "invisible_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "invisible-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util       = "0.3"
eventsource-stream = "0.2"
dirs               = "5"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
